# xblobs

./: LICENSE  README.md  pyproject.toml  setup.py
xblobs/: __init__.py  blob.py  blob_hist.py  blobs.py  detect.py  mpi.py  split_nc.py
